<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/back_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            app:tint="@color/black"
            android:contentDescription="@string/back_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/world_of_music"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"/>




    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/music_player_splash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"/>
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1"
        tools:ignore="ExtraText">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/previous_icon"
            app:iconSize="40dp"
            android:backgroundTint="@color/cool_green"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pause_icon"
            app:maxImageSize="40dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved"
            app:backgroundTint="@android:color/holo_red_light"
            app:tint="@android:color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next_icon"
            app:maxImageSize="40dp"
            android:backgroundTint="@color/cool_green"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/start_tv"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
           />

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/end_tv"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/equalizerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/equilizer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon_new"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>