<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <androidx.constraintlayout.widget.ConstraintLayout

       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <!--  for buttons on top -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shuffleBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/shuffle_icon"
                android:text="@string/shuffle_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/favoritesBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favorites_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/favorite_icon"
                android:text="@string/favorites_btn"
                android:textColor="@color/black"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/playlistBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlists_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/playlist_icon"
                android:text="@string/playlists_btn"
                android:textColor="@color/black"
                android:textAllCaps="false" />

        </LinearLayout>

        <TextView
            android:id="@+id/totalSongs"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_songs"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/musicRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />


    </LinearLayout>
       <androidx.fragment.app.FragmentContainerView
           android:id="@+id/nowPlaying"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:name="com.example.musicplayer.NowPlaying"
           tools:layout = "@layout/fragment_now_playing"/>

   </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>