<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cool_pink"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtnPLD"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/playlistNamePD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlists_btn"
            android:gravity="center"
            android:text="@string/playlists_btn"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:background="@color/cool_pink"
        android:layout_marginTop="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImgPD"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:src="@drawable/music_player_splash_screen"/>

        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="center|start"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails"
        android:paddingBottom="280dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shuffleBtnPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:srcCompat="@drawable/shuffle_icon"
        app:tint="@color/cool_pink"
        app:maxImageSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.9"
        app:strokeWidth="2dp"
        app:strokeColor="@color/cool_pink"
        android:visibility="invisible"/>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/addBtnPD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableLeft="@drawable/add_icon"
            android:text="@string/add_button"
            android:textColor="@color/black"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/removeBtnPD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/remove_all"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableLeft="@drawable/remove_icon"
            android:text="@string/remove_all"
            android:textColor="@color/black"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>